objects/Website_privilege__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <description>User profile Roles</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associate Customer Service Manager</fullName>
                </value>
                <value>
                    <fullName>Associate Sales Manager</fullName>
                </value>
                <value>
                    <fullName>CS Administrator, Communications &amp; Application Management</fullName>
                </value>
                <value>
                    <fullName>CS Agent, Contact Centre</fullName>
                </value>
                <value>
                    <fullName>CS Agent, Inclusion &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>CS Associate Manager, Application Management</fullName>
                </value>
                <value>
                    <fullName>CS Associate Manager, Communications</fullName>
                </value>
                <value>
                    <fullName>CS Associate Manager, Communications &amp; Application Management</fullName>
                </value>
                <value>
                    <fullName>CS Associate Manager, Contact Centre &amp; Telesales</fullName>
                </value>
                <value>
                    <fullName>CS Associate Manager, Inclusion &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>CS Associate Manager, Systems &amp; Reporting</fullName>
                </value>
                <value>
                    <fullName>CS Manager, Communications &amp; Applications Management</fullName>
                </value>
                <value>
                    <fullName>CS Manager, Contact Centre &amp; Telesales</fullName>
                </value>
                <value>
                    <fullName>CS Manager, Inclusion &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>CS Senior Administrator, Communications &amp; Application Management</fullName>
                </value>
                <value>
                    <fullName>CS Senior Agent, Communications &amp; Application Management</fullName>
                </value>
                <value>
                    <fullName>CS Senior Agent, Contact Centre</fullName>
                </value>
                <value>
                    <fullName>CS Senior Agent, Inclusion &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>CS Temp, Communications and Application Management</fullName>
                </value>
                <value>
                    <fullName>CS Temp, Inclusion &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>Customer Service Agent/Administrator</fullName>
                </value>
                <value>
                    <fullName>Customer Service Manager</fullName>
                </value>
                <value>
                    <fullName>Head of Customer Services</fullName>
                </value>
                <value>
                    <fullName>Head of Systems &amp; IT</fullName>
                </value>
                <value>
                    <fullName>Marketing Apprentice</fullName>
                </value>
                <value>
                    <fullName>NCS Inclusion Sales Associate</fullName>
                </value>
                <value>
                    <fullName>Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Coordinator</fullName>
                </value>
                <value>
                    <fullName>Sales Team Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Customer Service Agent/Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_access_level__c</fullName>
        <label>Website access level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Excluding consent</fullName>
                </value>
                <value>
                    <fullName>Excluding Inclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_system__c</fullName>
        <label>Website system</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Website privilege</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Website_access_level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Systems</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Website privilege Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website privileges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>